--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-smartcontract-lottery",
+  "name": "nextjs-smartcontract-lottery-fcc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "magic-sdk": "^17.3.0",
+    "moralis-v1": "^1.13.0",
+    "next": "12.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-moralis": "1.4.0",
+    "web3uikit": "^0.1.159"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2"
   }
 }
